--- a/arch/arm64/configs/cedric_defconfig
+++ b/arch/arm64/configs/cedric_defconfig
@@ -1402,6 +1402,8 @@ CONFIG_SCSI_UFS_QCOM_ICE=y
 CONFIG_HAVE_PATA_PLATFORM=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
+CONFIG_BLK_DEV_MD=y
+CONFIG_MD_LINEAR=y
 # CONFIG_BLK_DEV_MD is not set
 # CONFIG_BCACHE is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
@@ -1423,6 +1425,7 @@ CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
+CONFIG_DM_ANDROID_VERITY=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_TARGET_CORE is not set
@@ -4956,6 +4959,12 @@ CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
+CONFIG_ASYMMETRIC_KEY_TYPE=y
+CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
+CONFIG_X509_CERTIFICATE_PARSER=y
+CONFIG_PKCS7_MESSAGE_PARSER=y
+CONFIG_SYSTEM_TRUSTED_KEYRING=y
+CONFIG_SYSTEM_TRUSTED_KEYS="verity.x509.pem"
 # CONFIG_CRYPTO_DEV_CCP is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_ARM64_CRYPTO=y
